# cell

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
Cell/: CMakeLists.txt
Cell/src/: Cell.cpp  Cell.h  CellAggregation.cpp  CellAggregation.h
Cell/src/linux/: somain.cpp
Cell/src/win/: dllmain.cpp
Chromosome/: CMakeLists.txt
Chromosome/src/: Chromosome.cpp
Chromosome/src/linux/: somain.cpp
Chromosome/src/win/: dllmain.cpp
ConsoleApp/: CMakeLists.txt
ConsoleApp/src/: ConsoleApp.cpp
DNA/: CMakeLists.txt
DNA/src/: ActionEval.hpp  ConditionEval.hpp  DNA.cpp  exprtk.hpp
DNA/src/win/: dllmain.cpp
Model/: CMakeLists.txt
Model/src/: Model.cpp  Model.h
Model/src/win/: dllmain.cpp
RNA/: CMakeLists.txt
RNA/src/: RNA.cpp  RNAImpl.h  RNAImpl.hpp
RNA/src/linux/: somain.cpp
RNA/src/win/: dllmain.cpp  pch.cpp
StateMachine/: CMakeLists.txt
StateMachine/StateMachine/: CMakeLists.txt
StateMachine/StateMachine/src/: DeepHistory.cpp  DeepHistory.h  History.cpp  History.h  IAction.h  ICondition.h  IEvent.h  IFStatement.cpp  IFStatement.h  IState.h  LoopStatement.cpp  LoopStatement.h  NullCondition.h  ReadMe.txt  State.cpp  State.h  StateMachine.cpp  StateMachineImpl.cpp  StateMachineImpl.h  TransientState.cpp  TransientState.h  Transition.cpp  Transition.h  resource.h  stdafx.cpp  stdafx.h
StateMachine/StateMachine/src/win/: dllmain.cpp
StateMachine/XMLParser/: CMakeLists.txt
StateMachine/XMLParser/src/: IXMLParser.cpp  IXMLParser.h
StateMachine/XMLParser/src/win/: dllmain.cpp
TCPsocket/: CMakeLists.txt
TCPsocket/cert/: cert.pem
TCPsocket/cmake/: git_version.cmake
TCPsocket/proto/: TCPsocket.proto  protoc.sh
TCPsocket/scxml/: TCPsocketClient.scxml  TCPsocketServer.scxml
TCPsocket/src/: AcceptedSocket.cpp  AcceptedSocket.h  TCPsocket.cpp  TCPsocket.h
TCPsocket/src/linux/: somain.cpp
Webservice/: CMakeLists.txt
Webservice/inc/UrlEncoder/: Encoder.hpp
Webservice/proto/: Webservice.proto
Webservice/scxml/: WebserviceServer.scxml
Webservice/src/: Webservice.cpp  Webservice.h
Webservice/src/win/: dllmain.cpp
Websocket/: CMakeLists.txt
Websocket/cert/: key.pem  openssl.cnf
Websocket/proto/: Websocket.proto
Websocket/scxml/: WebsocketServer.scxml
Websocket/src/: Websocket.cpp  Websocket.h
Websocket/src/linux/: somain.cpp
inc/: IBiomolecule.h  ICell.h  RNA.h  compile_time.h  dynarray.h  type_def.h
inc/internal/: Chromosome.h  DNA.h  IModel.h  IStateMachine.h  mRNA.h  mtDNA.h
inc/internal/utils/: cell_utils.h  compile_time.h
mRNA/: CMakeLists.txt
mRNA/src/: mRNA.cpp
mRNA/src/linux/: somain.cpp
mRNA/src/win/: dllmain.cpp
mtDNA/: CMakeLists.txt
mtDNA/src/: ThreadPool.README  mtDNA.cpp
vs2019/: Cell.sln
vs2019/Cell/: Cell.Android.vcxproj  Cell.iOS.vcxproj  Cell.vcxproj
vs2019/Chromosome/: Chromosome.iOS.vcxproj  Chromosome.vcxproj
vs2019/ConsoleApp/: ConsoleApp.vcxproj
vs2019/DNA/: DNA.iOS.vcxproj  DNA.vcxproj
vs2019/Model/: Model.vcxproj
vs2019/RNA/: RNA.iOS.vcxproj  RNA.vcxproj
vs2019/StateMachine/: StateMachine.Android.vcxproj  StateMachine.vcxproj  XMLParser.Android.vcxproj  XMLParser.vcxproj
vs2019/Webservice/: Webservice.vcxproj
vs2019/Websocket/: Websocket.vcxproj
vs2019/mRNA/: mRNA.Android.vcxproj  mRNA.iOS.vcxproj  mRNA.vcxproj
vs2019/mtDNA/: mtDNA.Android.vcxproj  mtDNA.iOS.vcxproj  mtDNA.vcxproj
vs2022/: Cell.sln
vs2022/Cell/: Cell.vcxproj
vs2022/Chromosome/: Chromosome.Android.vcxproj  Chromosome.vcxproj
vs2022/ConsoleApp/: ConsoleApp.vcxproj
vs2022/DNA/: DNA.Android.vcxproj  DNA.vcxproj
vs2022/Model/: Model.Android.vcxproj  Model.iOS.vcxproj  Model.vcxproj
vs2022/RNA/: RNA.Android.vcxproj  RNA.vcxproj
vs2022/StateMachine/: StateMachine.vcxproj  XMLParser.vcxproj
vs2022/TCPsocket/: TCPsocket.vcxproj
vs2022/Webservice/: Webservice.vcxproj
vs2022/Websocket/: Websocket.Android.vcxproj  Websocket.vcxproj
vs2022/Websocket/uSockets/: uSockets.sln  uSockets.vcxproj
vs2022/mRNA/: mRNA.vcxproj
vs2022/mtDNA/: mtDNA.vcxproj
