cmake_minimum_required(VERSION 3.0.0)
project(Kernel VERSION 1.0.0)

if(ANDROID)
message(STATUS ${CMAKE_ANDROID_ARCH_ABI})
endif()

option(BUILD_SHARED_LIBS "Build shared library" ON)
option(BUILD_STATIC_LIBS "Build static library" OFF)

file(MAKE_DIRECTORY bin/)
file(MAKE_DIRECTORY lib/)
add_subdirectory(Model)
add_subdirectory(RNA)
add_subdirectory(mtDNA)
add_subdirectory(mRNA)
add_subdirectory(StateMachine)
add_subdirectory(DNA)
add_subdirectory(Chromosome)
add_subdirectory(Cell)
#add_subdirectory(UnitTest)
if(ANDROID)
add_subdirectory(uuid)
add_subdirectory(ndk-unzip)
add_subdirectory(AndroidPathway)
else()
add_subdirectory(Websocket/inc/zlib)
add_subdirectory(Websocket/inc/uWebSockets)
add_subdirectory(Websocket)
add_subdirectory(Webservice)
endif()
#add_subdirectory(UIKits)
add_subdirectory(iOSPathway)
if(BUILD_SHARED_LIBS)
	add_subdirectory(ConsoleApp)
endif()	

set(CPACK_PROJECT_NAME ${PROJECT_NAME})
set(CPACK_PROJECT_VERSION ${PROJECT_VERSION})
include(CPack)
